tests/bad/const-type-enum.pas
program const_type_enum;

type
    Color = (Red, Green);

const
    c: Color = Red;

begin
end.
